RESOLVED FIXED 260024
[Private Browsing 2.0] Some trackers blocked by libnetcore aren't listed in Privacy Report
https://bugs.webkit.org/show_bug.cgi?id=260024
Summary [Private Browsing 2.0] Some trackers blocked by libnetcore aren't listed in P...
Wenson Hsieh
Reported 2023-08-10 09:17:10 PDT
Attachments
Wenson Hsieh
Comment 1 2023-08-10 10:34:28 PDT
EWS
Comment 2 2023-08-10 15:59:01 PDT
Committed 266789@main (c307e83c5b06): <https://commits.webkit.org/266789@main> Reviewed commits have been landed. Closing PR #16569 and removing active labels.
Wenson Hsieh
Comment 3 2023-08-11 14:12:55 PDT
EWS
Comment 4 2023-08-11 15:48:00 PDT
Committed 266834@main (028e6dbdd9c6): <https://commits.webkit.org/266834@main> Reviewed commits have been landed. Closing PR #16619 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.