Source/WebCore/PAL/pal/spi/cocoa/NetworkSPI.h
@@ -38,6 +38,7 @@ void nw_parameters_set_source_application(nw_parameters_t, audit_token_t);
 void nw_parameters_set_source_application_by_bundle_id(nw_parameters_t, const char*);
 void nw_parameters_set_attributed_bundle_identifier(nw_parameters_t, const char*);
 nw_endpoint_t nw_endpoint_create_host_with_numeric_port(const char* hostname, uint16_t port_host_order);
+const char* nw_endpoint_get_known_tracker_name(nw_endpoint_t);
 bool nw_nat64_does_interface_index_support_nat64(uint32_t ifindex);
 
 void nw_parameters_set_is_third_party_web_content(nw_parameters_t, bool is_third_party_web_content);
